--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -5,6 +5,7 @@ import Footer from '../../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../../consts';
 import { getCollection } from 'astro:content';
 import FormattedDate from '../../components/FormattedDate.astro';
+import { heroImages } from '../../heroImages'
 import { Image } from 'astro:assets';
 
 const posts = (await getCollection('blog')).sort(
@@ -92,14 +93,21 @@ const posts = (await getCollection('blog')).sort(
 			<section>
 				<ul>
 					{
-						posts.map((post) => (
+						posts.map((post) => {
+							const imageKey = post.data.heroImage as keyof typeof heroImages;
+      						const hero = heroImages[imageKey];
+							console.log(hero);
+							console.log(imageKey)
+							return (
 							<li>
 								<a href={`/blog/${post.id}/`}>
 									{post.data.heroImage && (
 										<Image
-											width={720}
-											height={360}
-											src={post.data.heroImage}
+											width={1920}        // This is the ACTUAL (intrinsic) size you want to serve
+  											height={960}
+  											sizes="(max-width: 768px) 100vw, 960px"
+  											style="width: 100%; height: auto"
+											src={hero.default}
 											alt=""
 										/>
 									)}
@@ -109,7 +117,8 @@ const posts = (await getCollection('blog')).sort(
 									</p>
 								</a>
 							</li>
-						))
+							);
+						})
 					}
 				</ul>
 			</section>
