Add loading and priority attributes to hero image for improved performance

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -103,11 +103,13 @@ const posts = (await getCollection('blog')).sort(
 								<a href={`/blog/${post.id}/`}>
 									{post.data.heroImage && (
 										<Image
-											width={1920}   
+											width={1920}
   											height={960}
   											sizes="(max-width: 768px) 100vw, 960px"
   											style="width: 100%; height: auto"
 											src={hero.default}
+											loading="eager"
+											priority={true}
 											alt=""
 										/>
 									)}
