Add loading and priority attributes to hero image for improved performance

--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -108,6 +108,8 @@ const posts = (await getCollection('blog')).sort(
   											sizes="(max-width: 768px) 100vw, 960px"
   											style="width: 100%; height: auto"
 											src={hero.default}
+											loading={"eager"}
+											priority={true}
 											alt=""
 										/>
 									)}
